# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/wifi/dhcp/dhcp.gni")

################################################################################

ohos_shared_library("dhcp_manager_service") {
  install_enable = true
  sources = [
    "$DHCP_ROOT_DIR/services/mgr_service/src/dhcp_client_service_impl.cpp",
    "$DHCP_ROOT_DIR/services/mgr_service/src/dhcp_event_subscriber.cpp",
    "$DHCP_ROOT_DIR/services/mgr_service/src/dhcp_func.cpp",
    "$DHCP_ROOT_DIR/services/mgr_service/src/dhcp_server_service.cpp",
    "$DHCP_ROOT_DIR/services/mgr_service/src/dhcp_service.cpp",
    "$DHCP_ROOT_DIR/services/mgr_service/src/dhcp_service_api.cpp",
  ]

  include_dirs = [
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/common/log",
    "$DHCP_ROOT_DIR/services/mgr_service/include",
    "$DHCP_ROOT_DIR/interfaces/innerkits/native_cpp/interfaces",
    "$DHCP_ROOT_DIR/interfaces/innerkits/native_cpp/include",
    "//utils/native/base/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  deps = [ "//utils/native/base:utils" ]

  cflags_cc = [
    "-std=c++17",
    "-Wall",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
  ]
  ldflags = [
    "-fPIC",
    "-Wl,-E",
  ]

  part_name = "dhcp"
  subsystem_name = "communication"
}
