# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./signature/portallogin.gni")

ohos_app("portal_login_hap") {
  deps = [
    ":portal_login_js_assets",
    ":portal_login_resources",
  ]
  publicity_file = "publicity.xml"
  certificate_profile = "signature/portallogin.p7b"
  hap_name = "PortalLogin"
  part_name = "wifi"
  subsystem_name = "communication"
  module_install_dir = "app/PortalLogin"
  sdk_home = "//prebuilts/ohos-sdk/linux"
  sdk_type_name = [ "sdk.dir" ]
  assemble_type = "assembleHap"
  build_level = "module"
  build_modules = [ "entry" ]  
  if (defined(sign_hap_py_path)) {
    certificate_profile = "${certificate_profile_path}"
    key_alias = "CaptivePortalLoginHm Release"
    private_key_path = "CaptivePortalLoginHm Release"
    compatible_version = "14"
  }
}

ohos_js_assets("portal_login_js_assets") {
  hap_profile = "entry/src/main/module.json"
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("portal_login_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("portal_login_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":portal_login_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}