# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/wifi/wifi/wifi.gni")

group("ani_package") {
  deps = [ ":wifi_ani" ]
}

ohos_shared_library("wifi_ani") {
  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = true  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    debug = false
  }
  sources = [ "wifi_ani_manager.cpp" ]
  deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]
  external_deps = [ "runtime_core:ani" ]
  part_name = "wifi"
  subsystem_name = "communication"
  output_extension = "so"
}
