# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/wifi/wifi/wifi.gni")

ohos_shared_library("cj_wifi_ffi") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = false  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = false  # Enable integer overflow detection
    ubsan = false  # Enable some Ubsan options
    debug = false
  }
  install_enable = true
  include_dirs = [
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/log",
    "$WIFI_ROOT_DIR/frameworks/native/interfaces",
    "$WIFI_ROOT_DIR/interfaces/inner_api",
    "$WIFI_ROOT_DIR/frameworks/native/include",
    "$WIFI_ROOT_DIR/frameworks/native/src",
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
    "$WIFI_ROOT_DIR/utils/inc",
    "./include",
  ]

  sources = [
    "src/wifi_callback.cpp",
    "src/wifi_ffi.cpp",
  ]

  deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]

  defines = []
  if (wifi_feature_with_random_mac_addr) {
    defines += [ "SUPPORT_RANDOM_MAC_ADDR" ]
  }

  external_deps = [
    "ability_runtime:app_context",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "samgr:samgr_proxy",
  ]
  cflags = memory_optimization_cflags
  cflags_cc = memory_optimization_cflags_cc
  ldflags = memory_optimization_ldflags

  innerapi_tags = [ "platformsdk" ]
  part_name = "wifi"
  subsystem_name = "communication"
}
