# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/wifi/wifi/wifi.gni")

ohos_ndk_headers("wifi_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/wifi"
  sources = [ "$WIFI_ROOT_DIR/interfaces/c_api/include/oh_wifi.h" ]
}

ohos_ndk_library("libwifi_ndk") {
  ndk_description_file = "$WIFI_ROOT_DIR/frameworks/wifi_ndk/libwifi.ndk.json"
  output_name = "wifi_ndk"
  output_extension = "so"
  min_compact_version = "13"
}

config("wifi_ndk_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$WIFI_ROOT_DIR/interfaces/c_api/include",
    "$WIFI_ROOT_DIR/interfaces/inner_api",
  ]
}

ohos_shared_library("wifi_ndk") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    debug = false
  }

  sources = [ "$WIFI_ROOT_DIR/frameworks/wifi_ndk/oh_wifi.cpp" ]
  output_extension = "so"
  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]

  configs = [ ":wifi_ndk_config" ]

  deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "ndk"
  part_name = "wifi"
  subsystem_name = "communication"
}
