# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/wifi/wifi_lite.gni")
} else {
  import("//build/ohos.gni")
  import("//foundation/communication/wifi/wifi/wifi.gni")
}

local_base_sources = [ "$WIFI_ROOT_DIR/test/wifi_client/wifi_client.cpp" ]

local_base_include_dirs = [
  "$WIFI_ROOT_DIR/frameworks/native/include",
  "$WIFI_ROOT_DIR/frameworks/native/interfaces",
  "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
]

if (defined(ohos_lite)) {
  executable("wifi_client") {
    sources = local_base_sources
    include_dirs = local_base_include_dirs
    include_dirs += [ "//third_party/bounds_checking_function/include" ]
    deps = [
      "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
    defines = [ "OHOS_ARCH_LITE" ]
  }
} else {
  ohos_executable("wifi_client") {
    install_enable = true
    sources = local_base_sources
    include_dirs = local_base_include_dirs
    include_dirs += [
      "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
      "//commonlibrary/c_utils/base/include",
    ]
    deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]

    external_deps = [ "c_utils:utils" ]

    part_name = "wifi"
    subsystem_name = "communication"
  }
}
